<resources>
    <string name="app_name">getJobs();</string>
    <string name="action_settings">Settings</string>
    <string-array name="GroupMembers">
        <item>Tristan Duyvejonck</item>
        <item>Ethan Williams</item>
        <item>Ryan Pals</item>
        <item>Willem Paul</item>
    </string-array>

    <string-array name="states">
        <item name="Alabama" code="AL" >AL</item>
        <item name="Alaska" code="AK" >AK</item>
        <item name="Arizona" code="AZ" >AZ</item>
        <item name="Arkansas" code="AR" >AR</item>
        <item name="California" code="CA" >CA</item>
        <item name="Colorado" code="CO" >CO</item>
        <item name="Connecticut" code="CT" >CT</item>
        <item name="Delaware" code="DE" >DE</item>
        <item name="Florida" code="FL" >FL</item>
        <item name="Georgia" code="GA" >GA</item>
        <item name="Hawaii" code="HI" >HI</item>
        <item name="Idaho" code="ID" >ID</item>
        <item name="Illinois" code="IL" >IL</item>
        <item name="Indiana" code="IN" >N</item>
        <item name="Iowa" code="IA" >IA</item>
        <item name="Kansas" code="KS" >KS</item>
        <item name="Kentucky" code="KY" >KY</item>
        <item name="Louisiana" code="LA" >LA</item>
        <item name="Maine" code="ME" >ME</item>
        <item name="Maryland" code="MD" >MD</item>
        <item name="Massachusetts" code="MA">MA</item>
        <item name="Michigan" code="MI" >MI</item>
        <item name="Minnesota" code="MN" >MN</item>
        <item name="Mississippi" code="MS" >MS</item>
        <item name="Missouri" code="MO" >MO</item>
        <item name="Montana" code="MT" >MT</item>
        <item name="Nebraska" code="NE" >NE</item>
        <item name="Nevada" code="NV" >NV</item>
        <item name="New Hampshire" code="NH" >NH</item>
        <item name="New Jersey" code="NJ" >NJ</item>
        <item name="New Mexico" code="NM" >NM</item>
        <item name="New York" code="NY" >NY</item>
        <item name="North Carolina" code="NC" >NC</item>
        <item name="North Dakota" code="ND" >ND</item>
        <item name="Ohio" code="OH" >OH</item>
        <item name="Oklahoma" code="OK" >OK</item>
        <item name="Oregon" code="OR" >OR</item>
        <item name="Pennsylvania" code="PA" >PA</item>
        <item name="Rhode Island" code="RI" >RI</item>
        <item name="South Carolina" code="SC" >SC</item>
        <item name="South Dakota" code="SD" >SD</item>
        <item name="Tennessee" code="TN" >TN</item>
        <item name="Texas" code="TX" >TX</item>
        <item name="Utah" code="UT" >UT</item>
        <item name="Vermont" code="VT" >VT</item>
        <item name="Virginia" code="VA" >VA</item>
        <item name="Washington" code="WA" >WA</item>
        <item name="West Virginia" code="WV" >WV</item>
        <item name="Wisconsin" code="WI" >WI</item>
        <item name="Wyoming" code="WY" >WY</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">OK</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to edit resume -->
    <string name="title_activity_edit_resume">Edit Resume</string>
    <string name="header">Header</string>
    <string name="existingContent">Existing Content</string>
    <string name="editHeader">Edit Header</string>
    <string name="education">Education</string>
    <string name="editEducation">Edit Education</string>
    <string name="workExperience">Work Experience</string>
    <string name="editWorkExperience">Edit Work Experience</string>
    <string name="activities">Activities</string>
    <string name="editActivities">Edit Activities</string>
    <string name="skills">Skills</string>
    <string name="editSkills">Edit Skills</string>
    <string name="setNewHeader">set new header content</string>
    <string name="save">Save and Update Resume</string>
    <string name="getPassword">Get new password</string>
</resources>
